# eiskaltdcpp

./: .gitignore  CMakeLists.txt  EISKALTDCPP_PLAN.md  GTK_MODERNIZATION_PLAN.md  INSTALL  NMDC_PROTOBUF_EXTENSION_PLAN.md  PR_DESCRIPTION.md  README.md  SECURITY_AUDIT.md  TEST_COVERAGE_PLAN.md  build-local.ps1  update-translations.sh
.github/workflows/: build.yml  ci.yml  sdk.yml
cmake/: FindGTK3.cmake  FindGettext.cmake  FindLua.cmake  mingw_gcc15_semaphore_fix.h
data/: CMakeLists.txt
data/emoticons/: flylink.xml
dcpp/: ADLSearch.cpp  ADLSearch.h  AdcCommand.h  AdcHub.cpp  AdcHub.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  CMakeLists.txt  ChatMessage.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  ConnectivityManager.cpp  ConnectivityManager.h  CriticalSection.h  CryptoManager.cpp  CryptoManager.h  DCContext.cpp  DCContext.h  DCPlusPlus.cpp  DCPlusPlus.h  DebugManager.h  DirectoryListing.cpp  DirectoryListing.h  Download.cpp  Download.h  DownloadManager.cpp  DownloadManager.h  DownloadManagerListener.h  E2EPMManager.cpp  E2EPMManager.h  Encoder.cpp  Encoder.h  (+88 more)
dcpp/proto/: nmdcpb.proto
dht/: BootstrapManager.cpp  BootstrapManager.h  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  DHT.cpp  DHT.h  IndexManager.cpp  IndexManager.h  KBucket.cpp  KBucket.h  SearchManager.cpp  SearchManager.h  TaskManager.cpp  TaskManager.h  UDPSocket.cpp  UDPSocket.h  Utils.cpp  Utils.h
eiskaltdcpp-daemon/: CMakeLists.txt  ServerManager.cpp  ServerManager.h  ServerThread.cpp  ServerThread.h  jsonrpcmethods.cpp  jsonrpcmethods.h  nasdc.cpp  stdafx.h  xmlrpcserver.h
eiskaltdcpp-gtk/: CMakeLists.txt
eiskaltdcpp-gtk/src/: GtkContextAware.hh  (+50 more)
eiskaltdcpp-gtk/src/models/: AdlSearchDisplay.cpp  AdlSearchDisplay.h  CMakeLists.txt  ChatFormatter.cpp  ChatFormatter.h  DownloadQueueModel.cpp  DownloadQueueModel.h  DownloadQueueParams.cpp  DownloadQueueParams.h  EmoticonLoader.cpp  EmoticonLoader.h  FavoriteHubListModel.cpp  FavoriteHubListModel.h  FavoriteHubParams.cpp  FavoriteHubParams.h  FinishedTransferParams.cpp  FinishedTransferParams.h  GtkFormatters.cpp  GtkFormatters.h  GtkMessageTypes.h  GtkSettingsDefaults.cpp  GtkSettingsDefaults.h  GtkSettingsModel.cpp  GtkSettingsModel.h  GtkWulforUtil.cpp  GtkWulforUtil.h  HubUserListModel.cpp  HubUserListModel.h  HubUserParams.cpp  HubUserParams.h  NotifyDispatch.h  PublicHubFilter.cpp  PublicHubFilter.h  SearchResultParams.cpp  SearchResultParams.h  SearchResultsModel.cpp  SearchResultsModel.h  SettingsValidation.cpp  SettingsValidation.h  ShareBrowserModel.cpp  (+6 more)
eiskaltdcpp-qt/: CMakeLists.txt  eiskaltdcpp-qt.rc
eiskaltdcpp-qt/icons/appl/default/: default.qrc
eiskaltdcpp-qt/scriptengine/: ClientManagerScript.cpp  ClientManagerScript.h  ConsolePrinter.h  HashManagerScript.cpp  HashManagerScript.h  LogManagerScript.cpp  LogManagerScript.h  MainWindowScript.cpp  MainWindowScript.h  ScriptBridge.h  ScriptConsole.cpp  ScriptConsole.h  ScriptEngine.cpp  ScriptEngine.h
eiskaltdcpp-qt/src/: ADLS.cpp  ADLS.h  ADLSModel.cpp  ActionCustomizer.cpp  AntiSpamFrame.cpp  Antispam.cpp  Antispam.h  ArenaWidget.cpp  ArenaWidget.h  ArenaWidgetFactory.h  ArenaWidgetManager.cpp  ArenaWidgetManager.h  AutoToolTip.cpp  ChatEdit.cpp  CmdDebug.cpp  CmdDebug.h  CustomFontModel.cpp  DownloadQueue.cpp  DownloadQueue.h  DownloadQueueModel.cpp  DownloadQueueModel.h  DownloadToHistory.h  EiskaltApp.h  EiskaltApp_haiku.h  EiskaltApp_mac.h  EmoticonDialog.cpp  EmoticonDialog.h  EmoticonFactory.cpp  EmoticonFactory.h  FavoriteHubModel.cpp  FavoriteHubs.cpp  FavoriteHubs.h  FavoriteUsers.cpp  FavoriteUsers.h  FavoriteUsersModel.cpp  FileBrowserModel.cpp  FileHasher.cpp  FinishedTransfers.h  FinishedTransfersModel.cpp  FlowLayout.cpp  (+81 more)
eiskaltdcpp-qt/src/codeeditor/: codeeditor.cpp
extra/: CMakeLists.txt  dyndns.cpp  dyndns.h  ipfilter.cpp  ipfilter.h  lunar.h  upnpc.cpp  upnpc.h
haiku/: CMakeLists.txt  haiku.rdef
json/: CMakeLists.txt
linux/: build-in-ubuntu.sh
macos/: build-using-homebrew.sh
tests/: CMakeLists.txt  TestContext.h  test_adccommand.cpp  test_adlsearch.cpp  test_bloomfilter.cpp  test_cid.cpp  test_compression.cpp  test_dccontext.cpp  test_debugmanager.cpp  test_dht_context.cpp  test_encoder.cpp  test_exception.cpp  test_favoritemanager.cpp  test_file_utils.cpp  test_filteredfile.cpp  test_finisheditem.cpp  test_flags.cpp  test_format.cpp  test_hashbloom.cpp  test_hubentry.cpp  test_intrusive_ptr.cpp  test_logmanager.cpp  test_main.cpp  test_media_manager.cpp  test_merkletree.cpp  test_nmdc_escape.cpp  test_nmdcpb_crypto.cpp  test_nmdcpb_proto.cpp  test_nmdcpb_security.cpp  test_queueitem.cpp  test_scopedfunctor.cpp  test_searchqueue.cpp  test_searchresult.cpp  test_segment_coordinator.cpp  test_settingsmanager.cpp  test_sfvreader.cpp  test_simplexml.cpp  test_simplexmlreader.cpp  test_streams.cpp  test_string_tokenizer.cpp  (+11 more)
tests/fuzz/: fuzz_base64.cpp  fuzz_crypto.cpp  fuzz_protobuf.cpp
tests/gtk/: CMakeLists.txt  test_adlsearchdisplay.cpp  test_chatformatter.cpp  test_downloadqueuemodel.cpp  test_downloadqueueparams.cpp  test_emoticonloader.cpp  test_favoritehublistmodel.cpp  test_favoritehubparams.cpp  test_finishedtransferparams.cpp  test_gtk_main.cpp  test_gtkformatters.cpp  test_gtksettingsmanager.cpp  test_gtksettingsmodel.cpp  test_gtkwulforutil.cpp  test_hubuserlistmodel.cpp  test_hubuserparams.cpp  test_messagetypes.cpp  test_publichubfilter.cpp  test_searchresultparams.cpp  test_searchresultsmodel.cpp  test_settingsvalidation.cpp  test_sharebrowsermodel.cpp  test_soundnotify.cpp  test_transferlistmodel.cpp  test_transferparams.cpp
tests/qt/: CMakeLists.txt  stubs_wulforutil.cpp  test_adlsmodel.cpp  test_antispam.cpp  test_favoritehubmodel.cpp  test_flowlayout.cpp  test_ipfiltermodel.cpp  test_qt_main.cpp  test_searchblacklist.cpp  test_spymodel.cpp  test_wulforsettings.cpp
windows/: EiskaltDC++.nsi  build-using-mxe.sh  eiskaltdcpp.manifest  setup-win11-buildenv.ps1
(+1 files in other folders)
